[package]
name = "resomaterialyou"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.4", features = ["query"] }
material-colors = "0.3.2"
serde = { version = "1.0.202", features = ["derive"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
